--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rung-powerup",
   "version": "0.0.1",
-  "description": "Get updated about your Rung alerts inside Trello!",
+  "description": "Get up to date about your Rung alerts inside Trello!",
   "main": "server.js",
   "repository": "ssh://tfs.ngi.com.br:22/tfs/NG/rung-saas/_git/rung-powerup",
   "author": "Paulo Henrique Cuchi <paulo.cuchi@gmail.com>",
