--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "config": "^1.26.1",
     "cors": "^2.8.3",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.0.1",
