Add logo to login page

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
       {
         "files": "src/*.jsx",
         "globals": [
+          "window",
           "document"
         ],
         "rules": {
