--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "license": "MIT",
   "scripts": {
     "start": "node server.js",
-    "build": "webpack",
+    "build": "webpack && npm run build:index",
     "build:production": "webpack -p",
     "lint": "xo",
-    "dev": "yarn build && yarn start"
+    "dev": "yarn build && yarn start",
+    "build:index": "babel src/lib/trello.js --out-file public/trello.min.js"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
@@ -21,6 +22,7 @@
     "superagent-promise": "^1.1.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
