--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node server.js",
-    "build": "webpack",
-    "build:production": "webpack -p && npm run build:index",
+    "build": "rm -rf public && webpack",
+    "build:production": "rm -rf public && webpack -p",
     "lint": "xo",
     "dev": "yarn build && yarn start"
   },
