--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Alerts by Rung",
+    "name": "AAlerts by Rung",
     "details": "Get up to date about your Rung alerts inside Trello!",
     "icon": {
         "url": "./resources/rung.png"
