--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": " Alerts by Rung",
-    "details": "Get up to date about your Rung alerts inside Trello!",
+    "details": "Connect [Rung](https://app.rung.com.br/) with Trello to track your important alerts and notifications. The Rung Power-Up allows you to:\n\n- Install a Rung extension from Trello and link to a card\n- Get real-time updates on your Rung alerts\n- See your Rung alerts inside Trello and Rung\n\n### Screenshot\n![Rung](http://i.imgur.com/hwwYxnS.png)",
     "icon": {
         "url": "./resources/rung.png"
     },
